remove cal section

--- a/pizza.html
+++ b/pizza.html
@@ -148,7 +148,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Pasta Primavera
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$17 360 cal</p>
+          <p class="relative top-[10px] left-2 text-[20px]">$17</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
           <img
@@ -158,7 +158,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Chicken Carbonara
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$22 420 cal</p>
+          <p class="relative top-[10px] left-2 text-[20px]">$22</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
           <img
@@ -168,9 +168,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Fiery Buffalo Chicken Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">
-            $16.99 370 cal /slice, 8 slices
-          </p>
+          <p class="relative top-[10px] left-2 text-[20px]">$16.99, 8 slices</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
           <img
@@ -180,9 +178,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Philly Cheese Steak Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">
-            $18 300 cal /slice, 8 slices
-          </p>
+          <p class="relative top-[10px] left-2 text-[20px]">$18, 8 slices</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
           <img
@@ -192,9 +188,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Memphis BBQ Chicken Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">
-            $21 360 cal /slice, 8 slices
-          </p>
+          <p class="relative top-[10px] left-2 text-[20px]">$21 ,8 slices</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
           <img
@@ -204,9 +198,7 @@
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Cali Chicken Bacon Ranch Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">
-            $20 420 cal /slice, 8 slices
-          </p>
+          <p class="relative top-[10px] left-2 text-[20px]">$20,8 slices</p>
         </div>
       </article>
       <footer
