--- a/veggy.html
+++ b/veggy.html
@@ -122,7 +122,10 @@
     </article>
 
     <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
+            <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">
+            Kachow Down Delivery
+        </h2>
     </footer>
 
 </section>
