--- a/Italy.html
+++ b/Italy.html
@@ -37,48 +37,34 @@
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px] ">
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
           <h5 class="text-[22px] font-Bree">Keanu R.</h5>
-          <h6 class="mb-[5px] text-[14px]"><span class="material-symbols-outlined">
-            grade
-            </span><span class="material-symbols-outlined">
-                grade
-                </span><span class="material-symbols-outlined">
-                    grade
-                    </span><span class="material-symbols-outlined">
-                        grade
-                        </span><span class="material-symbols-outlined">
-                            grade
-                            </span></h6>
+          <h6 class="mb-[5px] text-[14px]">
+            <span class="material-symbols-outlined">grade</span>
+            <span class="material-symbols-outlined">grade</span>
+            <span class="material-symbols-outlined">grade</span>
+            <span class="material-symbols-outlined">grade</span>
+            <span class="material-symbols-outlined">grade</span>
+        </h6>
           <p>Italian food done right!</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
             <h5 class="text-[22px] font-Bree">Steve W.</h5>
-            <h6><span class="material-symbols-outlined">
-                grade
-                </span><span class="material-symbols-outlined">
-                    grade
-                    </span><span class="material-symbols-outlined">
-                        grade
-                        </span><span class="material-symbols-outlined">
-                            grade
-                            </span><span class="material-symbols-outlined">
-                                grade
-                                </span></h6>
+            <h6><span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+            </h6>
             <p>It really tastes like Italy!</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
             <h5 class="text-[22px] font-Bree">Freddie P.</h5>
-            <h6><span class="material-symbols-outlined">
-                grade
-                </span><span class="material-symbols-outlined">
-                    grade
-                    </span><span class="material-symbols-outlined">
-                        grade
-                        </span><span class="material-symbols-outlined">
-                            grade
-                            </span>
-                            <span class="material-symbols-outlined">
-                                grade
-                                </span></h6>
+            <h6>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+                <span class="material-symbols-outlined">grade</span>
+            </h6>
             <p>Best food I have had in a while!</p>
         </div>
     </section>
@@ -125,7 +111,10 @@
     </article>
 
     <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
+            <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">
+            Kachow Down Delivery
+        </h2>
     </footer>
     </section>
 
