--- a/Seafood.html
+++ b/Seafood.html
@@ -6,71 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"/>
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Captain Cliffs Fresh Seafoods</title>
   </head>
   <body>
-    <header
-      class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]"
-    >
-      <a href="./main.html"
-        ><h1
-          class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"
-        >
-          <img
-            class="h-5 invert absolute top-[26px] left-5"
-            src="./assets/images/pngwing.com.png"
-          />Kachow Down Delivery
-        </h1></a
-      >
-      <a
-        class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer"
-        >Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a
-      >
-      <button
-    class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"
-      >
+    <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
+      <a href="./main.html">
+        <h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl">
+          <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>
+          Kachow Down Delivery
+        </h1>
+      </a>
+      <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">
+        Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span>
+      </a>
+      <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
         </span>
       </button>
     </header>
 
-    <section
-      class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center"
-    >
-      <img
-        class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg"
-        src="https://ik.imagekit.io/tsoc7yrwg/seafood-platter-taste-156004-2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668739358441"
-      />
-      <div
-        class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto"
-      >
+    <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
+      <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg" src="https://ik.imagekit.io/tsoc7yrwg/seafood-platter-taste-156004-2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668739358441"/>
+      <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
           Captain Cliffs Fresh Seafoods
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
           Captain Cliffs Fresh Seafoods | 8.0 mi | $$$ | 4.7
-          <img
-            class="w-3 h-3 absolute bottom-[7px] right-[68px]"
-            src="./assets/images/star-grey-th.png">
+          <img class="w-3 h-3 absolute bottom-[7px] right-[68px]" src="./assets/images/star-grey-th.png">
         </p>
       </div>
-      <div
-        class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl"
-      >
+      <div class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl">
         <h6 id="v-open-status" class="text-[200%] mb-[5px] font-semibold">
           Open
         </h6>
@@ -78,16 +49,11 @@
       </div>
     </section>
 
-    <h3
-      id="top-ratings-header"
-      class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline"
-    >
+    <h3 id="top-ratings-header" class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline">
       Top Ratings
     </h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px]">
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Calvin P.</h5>
         <h6 class="mb-[5px] text-[14px]">
           <span class="material-symbols-outlined"> grade </span>
@@ -98,9 +64,7 @@
         </h6>
         <p>Captain Cliffs Fresh Seafoods. Five stars.</p>
       </div>
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Mauren K</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
@@ -113,9 +77,7 @@
           Classic Filet Oscar.
         </p>
       </div>
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Daniel I A.</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
@@ -137,10 +99,7 @@
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/oysters-on-the-half-shell-with-habanero-tomato-mignonette-91699-1.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1668737782092"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/oysters-on-the-half-shell-with-habanero-tomato-mignonette-91699-1.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1668737782092"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Oysters on the 1/2 Shell
           </h4>
@@ -148,10 +107,7 @@
           <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/Lobster-Bisque.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738220430"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Lobster-Bisque.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738220430"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Lobster Bisque
           </h4>
@@ -159,10 +115,7 @@
           <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/quick-pan-fried-tilapia-8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1668739190003"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/quick-pan-fried-tilapia-8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1668739190003"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Tilapia Fillet
           </h4>
@@ -170,10 +123,7 @@
           <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/bigstock-Traditional-barbecue-Italian-b-219791728.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738223532"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/bigstock-Traditional-barbecue-Italian-b-219791728.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738223532"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Black Mussels
           </h4>
@@ -181,19 +131,13 @@
           <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/Nashville-green-hills-office-space-crawfish-virtual-office.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738218508"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Nashville-green-hills-office-space-crawfish-virtual-office.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738218508"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Crawfish</h4>
           <p id="25.00" class="relative top-[10px] left-2 text-[20px]">$25 lb</p>
           <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
-            src="https://ik.imagekit.io/tsoc7yrwg/71fyzHAOcJL.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738878290"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/71fyzHAOcJL.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738878290"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             King Crab Legs
           </h4>
@@ -202,11 +146,14 @@
         </div>
       </article>
       <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
+          <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">
+          Kachow Down Delivery
+        </h2>
     </footer>
     </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="./assets/js/script.js"></script>
     
   </body>
