--- a/burger.html
+++ b/burger.html
@@ -6,72 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap"rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"/>
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Bill's Burger Bar</title>
   </head>
   <body>
-    <header
-      class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]"
-    >
-      <a href="./index.html"
-        ><h1
-          class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"
-        >
-          <img
-            class="h-5 invert absolute top-[26px] left-5"
-            src="./assets/images/pngwing.com.png"
-          />Kachow Down Delivery
-        </h1></a
-      >
-      <a
-        class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer"
-        >Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a
-      >
-      <button
-        class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"
-      >
+    <headerclass="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
+      <a href="./index.html">
+        <h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl">
+          <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>Kachow Down Delivery
+        </h1>
+      </a>
+      <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">
+        Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span>
+      </a>
+      <button class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
         </span>
       </button>
     </header>
 
-    <section
-      class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center"
-    >
-      <img
-        class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg"
-        src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/burger_image2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669088599374"
-      />
-      <div
-        class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto"
-      >
+    <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
+      <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/burger_image2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669088599374"/>
+      <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
           Burger Masters
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
           Burgers and Sandwich| 15.2 mi|$$$ | 4.7
-          <img
-            class="w-3 h-3 absolute right-[-15px] bottom-[7px]"
-            src="./assets/images/star-grey-th.png"
-          />
+          <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"/>
         </p>
       </div>
-      <div
-        class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl"
-      >
+      <div class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl">
         <h6 id="v-open-status" class="text-[200%] mb-[5px] font-semibold">
           Open
         </h6>
@@ -79,54 +48,45 @@
       </div>
     </section>
 
-    <h3
-      id="top-ratings-header"
-      class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline"
-    >
+    <h3 id="top-ratings-header" class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline">
       Top Ratings
     </h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px]">
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Williams Ruths</h5>
         <h6 class="mb-[5px] text-[14px]">
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
         <p>
           Ordered the veggie burger with crab salad,hot tots and a frozen black
           Irish to drink. Very good! Loved this place!
         </p>
       </div>
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Stephanie Dobbs</h5>
         <h6>
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
         <p>
           Burgers and fries were fantastic. It's an added touch that they fancy
           up the fries like they do the burgers.
         </p>
       </div>
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
         <h5 class="text-[22px] font-Bree">Dunks I.</h5>
         <h6>
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
         <p>Absolutely one of the best restaurants in area and pet friendly.</p>
@@ -139,60 +99,42 @@
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Taproom Bill's Burger
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$9|$13 Combo</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Classic_Chicken_Sandwich_Box.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854481"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Classic_Chicken_Sandwich_Box.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854481"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Classic Chicken Sandwich
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$7|$9.99</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/French_Onion_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855079"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/French_Onion_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855079"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             French Onion Burger
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$6|$13 Combo</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Minetta_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855157"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Minetta_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855157"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Minetta Burger
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$8|$12 Combo</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             John Boy & Billy BBQ Bacon Burger
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$6.99|9 Combo</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Bacon-and-Kimchi_Bill_s_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854270"
-          />
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Bacon-and-Kimchi_Bill_s_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854270"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Bacon-and-Kimchi Bill's Burger
           </h4>
@@ -200,16 +142,10 @@
         </div>
       </article>
 
-      <footer
-        class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl"
-      >
-        <h2
-          class="inline-block absolute left-[37%] top-[35%] text-white italic"
-        >
-          <img
-            class="absolute left-[-50px] bottom-2 h-[30px] invert"
-            src="./assets/images/pngwing.com.png"
-          />Kachow Down Delivery
+      <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
+          <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png"/>
+          Kachow Down Delivery
         </h2>
       </footer>
     </section>
