--- a/Seafood.html
+++ b/Seafood.html
@@ -104,7 +104,7 @@
             Oysters on the 1/2 Shell
           </h4>
           <p id="48.99" class="relative top-[10px] left-2 text-[20px]">$48.99</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Lobster-Bisque.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738220430"/>
@@ -112,7 +112,7 @@
             Lobster Bisque
           </h4>
           <p id="31.99"class="relative top-[10px] left-2 text-[20px]">$31.99 8 OZ.</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/quick-pan-fried-tilapia-8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1668739190003"/>
@@ -120,7 +120,7 @@
             Tilapia Fillet
           </h4>
           <p id="27.98"class="relative top-[10px] left-2 text-[20px]">$27.98 12OZ.</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/bigstock-Traditional-barbecue-Italian-b-219791728.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738223532"/>
@@ -128,13 +128,13 @@
             Black Mussels
           </h4>
           <p id="36.00" class="relative top-[10px] left-2 text-[20px]">$36 lb</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Nashville-green-hills-office-space-crawfish-virtual-office.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738218508"/>
           <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Crawfish</h4>
           <p id="25.00" class="relative top-[10px] left-2 text-[20px]">$25 lb</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/71fyzHAOcJL.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738878290"/>
@@ -142,7 +142,7 @@
             King Crab Legs
           </h4>
           <p id="43.00" class="relative top-[10px] left-2 text-[20px]">$43 lb</p>
-          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
       </article>
       <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
