--- a/burger.html
+++ b/burger.html
@@ -13,16 +13,17 @@
     <title>Bill's Burger Bar</title>
   </head>
   <body>
-    <headerclass="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
-      <a href="./index.html">
+    <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
+      <a href="./main.html">
         <h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl">
-          <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>Kachow Down Delivery
+          <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>
+          Kachow Down Delivery
         </h1>
       </a>
       <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">
         Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span>
       </a>
-      <button class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
+      <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
         </span>
@@ -33,10 +34,10 @@
       <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/burger_image2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669088599374"/>
       <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
-          Burger Masters
+          Bill's Burger Bar
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Burgers and Sandwich| 15.2 mi|$$$ | 4.7
+          Burgers and Sandwiches | 15.2 mi |$$| 4.7
           <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"/>
         </p>
       </div>
@@ -98,47 +99,53 @@
         Available Items
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Taproom Bill's Burger
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$9|$13 Combo</p>
+          <p id="9.89" class="relative top-[10px] left-2 text-[20px]">$9.89</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Classic_Chicken_Sandwich_Box.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854481"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Classic_Chicken_Sandwich_Box.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854481"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Classic Chicken Sandwich
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$7|$9.99</p>
+          <p id="7.89" class="relative top-[10px] left-2 text-[20px]">$7.89</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/French_Onion_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855079"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/French_Onion_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855079"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             French Onion Burger
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$6|$13 Combo</p>
+          <p id="6.99" class="relative top-[10px] left-2 text-[20px]">$6.99</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Minetta_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855157"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Minetta_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855157"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Minetta Burger
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$8|$12 Combo</p>
+          <p id="8.89" class="relative top-[10px] left-2 text-[20px]">$8.89</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             John Boy & Billy BBQ Bacon Burger
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$6.99|9 Combo</p>
+          <p id="6.98" class="relative top-[10px] left-2 text-[20px]">$6.98</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Bacon-and-Kimchi_Bill_s_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854270"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/Bacon-and-Kimchi_Bill_s_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087854270"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Bacon-and-Kimchi Bill's Burger
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$5| $12 Combo</p>
+          <p id="5.50" class="relative top-[10px] left-2 text-[20px]">$5.50</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
       </article>
 
@@ -149,5 +156,7 @@
         </h2>
       </footer>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
