--- a/pizza.html
+++ b/pizza.html
@@ -23,7 +23,7 @@
       <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">
         Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span>
       </a>
-      <button class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
+      <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
         </span>
@@ -37,7 +37,7 @@
           Papa Perry's Pizza 
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Pizza, Pasta, and more|2.0 mi|$$$ | 4.8
+          Pizza, Pasta, and more| 2.0 mi |$| 4.8
           <img class="w-3 h-3 absolute bottom-[7px] right-[-13px]" src="./assets/images/star-grey-th.png"/>
         </p>
       </div>
@@ -100,47 +100,53 @@
         Available Items
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Pasta_Primavera.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179615"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Pasta_Primavera.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179615"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Pasta Primavera
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$17</p>
+          <p id="17.00" class="relative top-[10px] left-2 text-[20px]">$17</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Chicken_Carbonara.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084180618"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Chicken_Carbonara.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084180618"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Chicken Carbonara
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$22</p>
+          <p id="22.00" class="relative top-[10px] left-2 text-[20px]">$22</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Fiery_Buffalo_Chicken_Pizza.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179401"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Fiery_Buffalo_Chicken_Pizza.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179401"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Fiery Buffalo Chicken Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$16.99, 8 slices</p>
+          <p id="16.99" class="relative top-[10px] left-2 text-[20px] ">$16.99 | 8 slices</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Philly_Cheese_Steak_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669085001934"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Philly_Cheese_Steak_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669085001934"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Philly Cheese Steak Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$18, 8 slices</p>
+          <p id="18.00" class="relative top-[10px] left-2 text-[20px]">$18 | 8 slices</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Memphis_BBQ_Chicken_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084180302"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Memphis_BBQ_Chicken_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084180302"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Memphis BBQ Chicken Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$21 ,8 slices</p>
+          <p id="21.00" class="relative top-[10px] left-2 text-[20px]">$21 | 8 slices</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Cali_Chicken_Bacon_Ranch_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179175"/>
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Cali_Chicken_Bacon_Ranch_Pizza.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669084179175"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Cali Chicken Bacon Ranch Pizza
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$20,8 slices</p>
+          <p id="20.00" class="relative top-[10px] left-2 text-[20px]">$20 | 8 slices</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
       </article>
       <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
@@ -150,5 +156,7 @@
         </h2>
       </footer>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
