Added checkout page and functionality

--- a/cart.html
+++ b/cart.html
@@ -33,9 +33,10 @@
             </div>
         </section>
         <h2 id="foodTotal" class="absolute text-5xl bottom-[35px] left-[10%] font-Bree"></h2>
+        <button id="checkoutBtn" class="absolute bottom-[30px] right-[50px] text-4xl bg-header-grey pt-2 pb-3 px-[50px] rounded-3xl text-white hover:bg-info-grey">Checkout</button>
     </article>
 
-    <button id="checkoutBtn" class="absolute left-[83%] top-[230px] text-4xl bg-header-grey pt-2 pb-3 px-[50px] rounded-3xl text-white hover:bg-info-grey">Checkout</button>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/cart.js"></script>
